Adds samples for Header and Homepage

--- a/gregary/static/gregary/samples/homepage.html
+++ b/gregary/static/gregary/samples/homepage.html
@@ -9,14 +9,18 @@
         <header>
             <!-- Title Bar -->
             <h1 id="main-title">Gregary</h1>
-            <div id="uinfo-outer-container" align="center">
-                <img src="dp.jpg" id="profile-picture">
-                <span id="uinfo">
-                    <p class="uinfo"><b>Vinam</b></p><br>
-                    <p class="uinfo">Arora</p>
-                </span>
-            </div>
+            <div id="uinfo-outer-container"></div>
         </header>
+        
+        <!-- Main Content -->
+        <div id="main-container-bg">
+            <div id="main-container">
+                <div id="row1" class="main-row">
+                </div>
+                <div id="row2" class="main-row">
+                </div>
+            </div>
+        </div>
         
         <!-- Run JS scrips -->
         <script type="text/javascript" src="jquery-3.1.1.js"></script>
