Improved titlebar and homepage positioning. Flawless now

--- a/gregary/static/gregary/samples/homepage.html
+++ b/gregary/static/gregary/samples/homepage.html
@@ -13,13 +13,8 @@
         </header>
         
         <!-- Main Content -->
-        <div id="main-container-bg">
-            <div id="main-container">
-                <div id="row1" class="main-row">
-                </div>
-                <div id="row2" class="main-row">
-                </div>
-            </div>
+        <div id="content-bg"></div>
+        <div id="main-container">
         </div>
         
         <!-- Run JS scrips -->
