--- a/gregary/static/gregary/samples/events.html
+++ b/gregary/static/gregary/samples/events.html
@@ -27,6 +27,12 @@
         <div id="main-contents"></div>
         
         <!-- Run JS scripts -->
+        <script type='text/javascript'>
+            function isLoggedIn() {
+                'use strict';   
+                return true;
+            }
+        </script>
         <script type="text/javascript" src="jquery-3.1.1.js"></script>
         <script type="text/javascript" src="homepage.js"></script>
         <script type="text/javascript" src="titlebar.js"></script>
