--- a/gregary/static/gregary/samples/homepage.html
+++ b/gregary/static/gregary/samples/homepage.html
@@ -18,6 +18,12 @@
         </div>
         
         <!-- Run JS scrips -->
+        <script type='text/javascript'>
+            function isLoggedIn() {
+                'use strict';   
+                return true;
+            }
+        </script>
         <script type="text/javascript" src="jquery-3.1.1.js"></script>
         <script type="text/javascript" src="homepage.js"></script>
         <script type="text/javascript" src="titlebar.js"></script>
